[package]
name = "flood"
version = "0.1.0"
edition = "2021"
authors = ["Real-Fruit-Snacks"]
description = "Fast web fuzzer with recursive discovery"
license = "MIT"
repository = "https://github.com/Real-Fruit-Snacks/Flood"
readme = "README.md"
keywords = ["fuzzer", "security", "pentesting", "web", "brute-force"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "socks", "gzip", "deflate", "brotli"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
regex = "1"
rand = "0.8"
url = "2"
anyhow = "1"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
